had the wrong path to the JS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Wampa Stompa</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="img">
