--- a/index.html
+++ b/index.html
@@ -19,10 +19,21 @@
   </header>
   <main>
     <section class="img">
+      <svg width="0" height="0">
+        <defs>
+          <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+            <stop offset="0%" style="stop-color:#d33aea;stop-opacity:1" />
+            <stop offset="100%" style="stop-color:#e62b43;stop-opacity:1" />
+          </linearGradient>
+          <mask id="mask" maskUnits="userSpaceOnUse" x="0" y="0" width="100%" height="100%">
+            <rect x="0" y="0" width="100%" height="100%" style="fill: url(#gradient);" />
+          </mask>
+        </defs>
+      </svg>
       <div class="text" id="txt"></div>
       <div class="hand"></div>
     </section>
-    <button class="download-btn" id="downloadBtn">Download Image</button>
+    <button class="download-btn" id="downloadBtn">Download Your Wampa Stompa Mix</button>
   </main>
   <img src="img/wampastompamix-bg.png" style="display:none;" crossorigin="anonymous">
   <img src="img/wampastompamix-hand.png" style="display:none;" crossorigin="anonymous">
