--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </header>
   <main>
     <section class="img">
+      <canvas id="textCanvas" width="1000" height="420" style="display:none;"></canvas>
       <div class="text" id="txt"><span id="txtSpan"></span></div>
       <div class="hand"></div>
     </section>
