--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   </header>
   <main>
     <section class="img">
-      <canvas id="textCanvas" width="1000" height="420" style="display:none;"></canvas>
-      <div class="text" id="txt"><span id="txtSpan"></span></div>
+      <canvas id="textCanvas" width="1000" height="420"></canvas>
       <div class="hand"></div>
     </section>
     <button class="download-btn" id="downloadBtn">Download Your Wampa Stompa Mix</button>
